@@ -44,9 +44,8 @@ function smarty_cms_function_cms_stylesheet($params, &$smarty)
 
 	$qparms = array();
 	$where = array();
-	$query = 'SELECT DISTINCT A.css_id,A.css_name,A.css_text,A.modified_date,
-		A.media_type,B.assoc_order 
-	FROM '.cms_db_prefix().'css A LEFT JOIN '.cms_db_prefix().'css_assoc B ON A.css_id = B.assoc_css_id';
+	$query = '';
+	$order = '';
 	if( isset($params['media']) && strtolower($params['media']) != 'all' )
 	{
 		$where[] = '(media_type LIKE ? OR media_type LIKE ?)';
@@ -55,17 +54,23 @@ function smarty_cms_function_cms_stylesheet($params, &$smarty)
 	}
 	if (isset($params['name']) && $params['name'] != '')
 	{
+		$query = 'SELECT DISTINCT A.css_id,A.css_name,A.css_text,A.modified_date, A.media_type
+                    FROM '.cms_db_prefix().'css A';
 		$where[] = 'A.css_name = ?';
-		$qparms[] = $params['name'];
+		$qparms[] = trim($params['name']);
 	}
 	else //No name?  Use the template_id instead
 	{
+  	    $query = 'SELECT DISTINCT A.css_id,A.css_name,A.css_text,A.modified_date,
+               		              A.media_type,B.assoc_order 
+   	                FROM '.cms_db_prefix().'css A 
+                    LEFT JOIN '.cms_db_prefix().'css_assoc B ON A.css_id = B.assoc_css_id';
 		$where[] = 'B.assoc_type = ?
 		AND B.assoc_to_id = ?';
 		$qparms = array('template', $template_id);
+		$order = 'ORDER BY B.assoc_order';
 	}
-	$query .= " WHERE ".implode(' AND ',$where);
-	$query .= ' ORDER BY B.assoc_order';
+	$query .= " WHERE ".implode(' AND ',$where).' '.$order;
 
 	$conv_filename = array(' '=>'',':'=>'_');
 	$res = $db->GetArray($query, $qparms);
